Teste de integração criado e funcionando